Added Functionality, and Tweaked Design

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     </head>
     <body>
         <h1>Palindrome Checker</h1>
-        <p id="palindromeResult">Hello World</p>
+        <h2>Check if your word is a palindrome or not!</h2>
         <input type= "text"> 
-        <button>Check</button>
+        <button onclick="isPalindrome()">Check</button>
+        <p id="palindromeResult">The result of your palindrome will go here</p>
         <script type="text/javascript" src = "functions.js"></script>
     </body>
 </html>
